<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_cinza"
    tools:context=".Entrada">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/proximoID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/proximo"
        android:textAllCaps="true"
        android:textColor="@color/cor_fonte"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaEntradaID"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/horaEntradaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/caixa_hora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/label1"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/titulo_hora"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horaEntradaID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewEntradaID"
        android:layout_width="@dimen/tamanho_imagem"
        android:layout_height="@dimen/tamanho_imagem"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/tab_entrada"
        android:src="@drawable/entrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaEntradaID" />

</android.support.constraint.ConstraintLayout>